# kompyle

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  compose.yml  dockerfile  pyproject.toml
.github/workflows/: build.yml  build_deps.yml  build_solvers.yml  publish.yml
assets/toy/: README.md  toy0.cnf  toy1.cnf
cmake/: Findarjun.cmake  Findcadiback.cmake  Findcadical.cmake  Findcryptominisat5.cmake  Findganak.cmake
docker/: deps.dockerfile  dev.dockerfile  main.dockerfile  test.dockerfile
include/kompyle/: constants.h  core.h  field_circuit.h
python/kompyle/: __init__.py
scripts/: README.md  build_deps.sh  build_editor.sh  validate_deps.sh
src/: core.cpp  core_bindings.cpp  sdd.cpp
tests/: conftest.py  test.py  test_api.py  test_integration.py  test_structure.py  util.py
